--- a/iQuiz/Podfile
+++ b/iQuiz/Podfile
@@ -4,4 +4,5 @@ use_frameworks!
 
 target ‘iQuiz’ do
     pod 'Alamofire', '~> 4.4'
+    pod 'SwiftyJSON', :git => 'https://github.com/SwiftyJSON/SwiftyJSON.git'
 end
